--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_DRIVER=mysql 
 API_SECRET=98hbun98h #Used for creating a JWT. Can be anything 
 DB_USER=root
